--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-           // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
             zipAlignEnabled true
         }
@@ -52,7 +52,7 @@ android {
         }
     }
     dexOptions {
-        javaMaxHeapSize "4g"
+        javaMaxHeapSize "1g"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -79,11 +79,12 @@ dependencies {
     //androidTestCompile 'com.android.support.test:runner:0.3'
 
     provided 'org.roboguice:roboblender:3.0.1'
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.roboguice:roboguice:3.0.1'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.annimon:stream:1.0.1'
-
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(path: ':backend', configuration: 'android-endpoints')
 }
