--- a/backend/src/main/webapp/WEB-INF/web.xml
+++ b/backend/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,8 @@
         <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
         <init-param>
             <param-name>services</param-name>
-            <param-value>com.tokko.recipesv2.backend.RegistrationEndpoint,
-                com.tokko.recipesv2.backend.MessagingEndpoint
+            <param-value>com.tokko.recipesv2.backend.endpoints.RegistrationEndpoint,
+                com.tokko.recipesv2.backend.endpoints.MessagingEndpoint
             </param-value>
         </init-param>
     </servlet>
