--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
     defaultConfig {
-        applicationId "com.tokko.recipes"
+        applicationId "com.tokko.recipesv2"
         minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
