--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,11 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".GroceryListActivity"
+            android:name=".groceries.GroceryListActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
-
         </activity>
-
-        <activity android:name=".LoginActivity">
+        <activity android:name=".authentication.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,6 +38,7 @@
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+
                 <category android:name="com.tokko.recipesv2.gcm" />
             </intent-filter>
         </receiver>
@@ -51,7 +50,6 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
-
         <service android:name=".gcm.GcmRegistrationService" />
         <service
             android:name=".gcm.GcmInstanceIDListenerService"
@@ -60,6 +58,18 @@
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".masterdetail.ItemListActivity"
+            android:label="@string/title_item_list"></activity>
+        <activity
+            android:name=".masterdetail.ItemDetailActivity"
+            android:label="@string/title_item_detail"
+            android:parentActivityName=".masterdetail.ItemListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.tokko.recipesv2.masterdetail.ItemListActivity" />
+        </activity>
     </application>
 
 </manifest>
