--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,10 +77,8 @@ dependencies {
     androidTestCompile 'com.jayway.android.robotium:robotium:5.4.1'
     androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.4.1'
     //androidTestCompile 'com.android.support.test:runner:0.3'
-
     provided 'org.roboguice:roboblender:3.0.1'
-
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile 'org.roboguice:roboguice:3.0.1'
     compile 'com.google.android.gms:play-services:7.5.0'
@@ -88,4 +86,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.annimon:stream:1.0.1'
     compile 'com.android.support:support-v4:22.2.1'
+    compile project(':backend')
 }
