--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,9 @@
 
         <activity
             android:name=".masterdetail.ItemListActivity"
-            android:label="@string/title_item_list"></activity>
+            android:label="@string/title_item_list">
+
+        </activity>
         <activity
             android:name=".masterdetail.ItemDetailActivity"
             android:label="@string/title_item_detail"
