--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.tokko.recipesv2.masterdetail.ItemListActivity" />
         </activity>
+        <!--
+        <meta-data android:name="roboguice.modules"
+            android:value="com.tokko.recipesv2.masterdetail.MasterDetailGuiceModule,com.tokko.recipesv2.groceries.GroceryGuiceModule" />
+            -->
     </application>
 
 </manifest>
