--- a/.travis.yml
+++ b/.travis.yml
@@ -10,17 +10,17 @@ android:
   - extra-google-m2repository
   - extra-android-m2repository
   - addon-google_apis-google-22
-#  - sys-img-armeabi-v7a-android-22
+  - sys-img-armeabi-v7a-android-22
 jdk:
 - oraclejdk8
 before_script:
 #  - "echo $JAVA_OPTS"
 #  - "export JAVA_OPTS=-Xmx5122m"
   - chmod +x gradlew
-#  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-#  - emulator -avd test -no-skin -no-audio -no-window &
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 script:
   - "./gradlew assemble check" #connectedCheck --stacktrace"
 dd:
