--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ android:
   components:
   - platform-tools
   - tools
-  - build-tools-21.q.1
-  - android-21
+  - build-tools-21.1.1
+  - android-22
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
