--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ android:
   - platform-tools
   - tools
   - build-tools-21.1.1
+  - build-tools-22.0.1
   - android-22
   - extra-google-google_play_services
   - extra-google-m2repository
