--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar">
         <activity
             android:name=".groceries.GroceryListActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:label="@string/app_name">
         </activity>
         <activity android:name=".authentication.LoginActivity">
             <intent-filter>
@@ -68,8 +67,7 @@
         <activity
             android:name=".masterdetail.ItemDetailActivity"
             android:label="@string/title_item_detail"
-            android:parentActivityName=".masterdetail.ItemListActivity"
-            android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
+            android:parentActivityName=".masterdetail.ItemListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.tokko.recipesv2.masterdetail.ItemListActivity" />
