--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,6 +54,12 @@ if ('appengineUpdate' in runTasks) {
         def newVersion = currentVersion.toInteger() + 1
         xml = matcher.replaceAll('<version>v' + newVersion)
         appenginewebxml.write(xml);
+        def constantsFile = file('/src/main/java/com/tokko/recipesv2/backend/endpoints/Constants.java')
+        def code = constantsFile.getText()
+        def m2 = Pattern.compile('API_VERSION = "v\\d+"').matcher(code)
+        m2.find()
+        code = m2.replaceAll('API_VERSION = "v' + newVersion + '"')
+        constantsFile.write(code)
     }
 }
 
