--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
   - "./gradlew connectedAndroidTest --stacktrace"
+  - if [ "$TRAVIS_BRANCH" = "alpha" ]; then ./gradlew appengineUpdate; fi
   - if [ "$TRAVIS_BRANCH" = "alpha" ]; then ./gradlew publishRelease; fi
 after_success:
   - git config user.email $GIT_EMAIL
