--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,7 @@
             android:name=".masterdetail.ItemListActivity"
             android:label="@string/title_item_list"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize">
 
         </activity>
@@ -67,6 +68,7 @@
             android:name=".masterdetail.ItemDetailActivity"
             android:label="@string/title_item_detail"
             android:parentActivityName=".masterdetail.ItemListActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
