--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     //compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.annimon:stream:1.0.1'
+    compile 'com.google.code.gson:gson:2.3.1'
     // compile 'com.android.support:support-v4:22.2.1'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(path: ':backend', configuration: 'android-endpoints')
