--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,7 +115,7 @@ dependencies {
     testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
     androidTestCompile 'junit:junit:4.12'
-    // androidTestCompile 'org.mockito:mockito-all:2.0.2-beta'
+    androidTestCompile 'org.mockito:mockito-all:2.0.2-beta'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
     androidTestCompile('com.android.support.test:runner:0.3') {
         exclude group: 'com.android.support', module: 'support-annotations'
