--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.appengine:appengine-testing:1.9.21'
     testCompile 'com.google.appengine:appengine-api-stubs:1.9.21'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+    //testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '1.3'
+    //testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.inject:guice:4.0'
     compile 'com.google.inject.extensions:guice-servlet:4.0'
