--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ android:
   - extra-google-m2repository
   - extra-android-m2repository
   - addon-google_apis-google-21
-  #- sys-img-armeabi-v7a-android-21
+  - sys-img-armeabi-v7a-android-21
 jdk:
 - oraclejdk8
 
@@ -30,18 +30,18 @@ before_script:
   - export JAVA_OPTS=-Xmx4096m #TODO: REMOVE THESE LINES
   - export GRADLE_OPTS="-Xmx4096m -XX:MaxPermSize=4096m"
   - chmod +x gradlew
- # - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-  #- emulator -avd test -no-skin -no-audio -no-window &
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
 
 #before_deploy:
 #  - git config --global user.email "builds@travis-ci.com"
 #  - git config --global user.name "Travis CI"
 #  - ls -R
 script:
-  - "./gradlew test --stacktrace"
- # - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
- # - "./gradlew connectedAndroidTest --stacktrace"
+  - "./gradlew testRelease --stacktrace"
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+  - "./gradlew connectedAndroidTest --stacktrace"
  # - if [ "$TRAVIS_BRANCH" = "alpha" ]; then ./gradlew appengineUpdate; fi
  # - if [ "$TRAVIS_BRANCH" = "alpha" ]; then ./gradlew publishRelease; fi
 #after_success:
