--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import java.util.regex.Pattern
+
 buildscript {
     dependencies {
         classpath 'me.tatarka:gradle-retrolambda:3.2.0'
@@ -38,27 +40,39 @@ android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
-    def versionPropsFile = file('version.properties')
-    if (versionPropsFile.canRead()) {
-        def Properties versionProps = new Properties()
-        versionProps.load(new FileInputStream(versionPropsFile))
-        def value = 0
-        def runTasks = gradle.startParameter.taskNames
-        if ('assemble' in runTasks || 'publishRelease' in runTasks || 'assembleRelease' in runTasks || 'aR' in runTasks) {
-            value = 1;
-        }
-        def code = versionProps['VERSION_CODE'] != null ? versionProps['VERSION_CODE'].toInteger() + value : 2
-        def name = versionProps['VERSION_NAME'] != null ? versionProps['VERSION_NAME'].toInteger() + value : 1
-        versionProps['VERSION_CODE'] = code.toString()
-        versionProps['VERSION_NAME'] = name.toString()
-        if (value == 1)
-            versionProps.store(versionPropsFile.newWriter(), null)
-        defaultConfig {
-            versionCode code
-            versionName "0.0." + name
+    task('increaseVersionCode') << {
+        def manifestFile = file("src/main/AndroidManifest.xml")
+        def pattern = Pattern.compile("versionCode=\"(\\d+)\"")
+        def manifestText = manifestFile.getText()
+        def matcher = pattern.matcher(manifestText)
+        matcher.find()
+        def versionCode = Integer.parseInt(matcher.group(1))
+        def manifestContent = matcher.replaceAll("versionCode=\"" + ++versionCode + "\"")
+        manifestFile.write(manifestContent)
+    }
 
+    task('incrementVersionName') << {
+        def manifestFile = file("src/main/AndroidManifest.xml")
+        def patternVersionNumber = Pattern.compile("versionName=\"(\\d+)\\.(\\d+)\\.(\\d+)\\.(\\d+)\"")
+        def manifestText = manifestFile.getText()
+        def matcherVersionNumber = patternVersionNumber.matcher(manifestText)
+        matcherVersionNumber.find()
+        def majorVersion = Integer.parseInt(matcherVersionNumber.group(1))
+        def minorVersion = Integer.parseInt(matcherVersionNumber.group(2))
+        def pointVersion = Integer.parseInt(matcherVersionNumber.group(3))
+        def buildVersion = Integer.parseInt(matcherVersionNumber.group(4))
+        def mNextVersionName = majorVersion + "." + minorVersion + "." + pointVersion + "." + (buildVersion + 1)
+        def manifestContent = matcherVersionNumber.replaceAll("versionName=\"" + mNextVersionName + "\"")
+        manifestFile.write(manifestContent)
+    }
+
+    tasks.whenTaskAdded { task ->
+        if (task.name == 'publishRelease') {
+            task.dependsOn 'increaseVersionCode'
+            task.dependsOn 'incrementVersionName'
         }
     }
+
     play {
         serviceAccountEmail = '92588905880-fdolvkj29p3l637u5fgaa3jke0vksd17@developer.gserviceaccount.com'
         pk12File = file('key.p12')
