--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -43,8 +43,8 @@ dependencies {
     compile 'org.mockito:mockito-all:2.0.2-beta'
 }
 
-def runTasks = gradle.startParameter.taskNames
-if ('appengineUpdate' in runTasks) {
+
+task('incrementVersionNumber') << {
     def appenginewebxml = file('/src/main/webapp/WEB-INF/appengine-web.xml')
     if (appenginewebxml.canRead()) {
         def xml = appenginewebxml.getText()
@@ -62,6 +62,12 @@ if ('appengineUpdate' in runTasks) {
         constantsFile.write(code)
     }
 }
+tasks.whenTaskAdded { task ->
+    if (task.name == 'appengineUpdate') {
+        task.dependsOn 'increaseVersionNumber'
+    }
+}
+
 
 appengine {
     downloadSdk = true
