test for expandedschedule

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile 'com.google.appengine:appengine-endpoints:1.9.18'
     compile 'com.google.appengine:appengine-endpoints-deps:1.9.18'
     compile 'javax.servlet:servlet-api:2.5'
-    compile 'joda-time:joda-time:2.8.2'
+ //   compile 'joda-time:joda-time:2.8.2'
     compile 'com.googlecode.objectify:objectify:5+'
     compile 'com.ganyo:gcm-server:1.0.2'
     testCompile 'junit:junit:4.12'
