--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,17 @@ before_script:
   - chmod +x gradlew
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
-
+env:
+  global:
+    # install timeout in minutes (2 minutes by default)
+    - ADB_INSTALL_TIMEOUT=8
 #before_deploy:
 #  - git config --global user.email "builds@travis-ci.com"
 #  - git config --global user.name "Travis CI"
 #  - ls -R
 script:
   - "./gradlew testRelease --stacktrace"
+  - android list target
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
   - "./gradlew connectedAndroidTest --stacktrace"
