emulator fix on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ android:
   - platform-tools
   - tools
   - build-tools-21.1.1
-  - build-tools-22.0.1
-  - android-22
+#  - build-tools-22.0.1
+  - android-21
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
@@ -31,7 +31,7 @@ before_script:
   - export GRADLE_OPTS="-Xmx4096m -XX:MaxPermSize=4096m"
   - chmod +x gradlew
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window -no-boot-anim &
+  - emulator -avd test -no-skin -no-audio -no-window  &
 
 #before_deploy:
 #  - git config --global user.email "builds@travis-ci.com"
