--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ android:
   - platform-tools
   - tools
   - build-tools-21.1.1
-#  - build-tools-22.0.1
-  - android-21
+  - build-tools-22.0.1
+  - android-22
   - extra-google-google_play_services
   - extra-google-m2repository
   - extra-android-m2repository
@@ -39,9 +39,9 @@ before_script:
 #  - ls -R
 script:
   - "./gradlew testRelease --stacktrace"
-  - android list target
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+  - android list target
   - "./gradlew connectedAndroidTest --stacktrace"
  # - if [ "$TRAVIS_BRANCH" = "alpha" ]; then ./gradlew appengineUpdate; fi
  # - if [ "$TRAVIS_BRANCH" = "alpha" ]; then ./gradlew publishRelease; fi
