--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.tokko.recipesv2"
     android:versionCode="9"
-    android:versionName="0.0.1"
-    package="com.tokko.recipesv2" >
+    android:versionName="0.0.1" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -20,9 +20,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar">
-
-    <activity android:name=".authentication.LoginActivity">
+        android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar" >
+        <activity android:name=".authentication.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +33,7 @@
             android:name=".gcm.GcmReceiver"
             android:enabled="true"
             android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND">
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
 
@@ -44,7 +43,7 @@
 
         <service
             android:name=".gcm.GcmListenerService"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
@@ -52,7 +51,7 @@
         <service android:name=".gcm.GcmRegistrationService" />
         <service
             android:name=".gcm.GcmInstanceIDListenerService"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
@@ -62,15 +61,14 @@
             android:name=".masterdetail.ItemListActivity"
             android:label="@string/title_item_list"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="adjustResize">
-
+            android:windowSoftInputMode="adjustResize" >
         </activity>
         <activity
             android:name=".masterdetail.ItemDetailActivity"
             android:label="@string/title_item_detail"
             android:parentActivityName=".masterdetail.ItemListActivity"
             android:screenOrientation="landscape"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.tokko.recipesv2.masterdetail.ItemListActivity" />
@@ -78,7 +76,11 @@
         <!--
         <meta-data android:name="roboguice.modules"
             android:value="com.tokko.recipesv2.masterdetail.MasterDetailGuiceModule,com.tokko.recipesv2.groceries.GroceryGuiceModule" />
-            -->
+        -->
+        <activity
+            android:name=".schedule.ScheduleActivity"
+            android:label="@string/title_activity_schedule" >
+        </activity>
     </application>
 
 </manifest>
