--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ android:
   components:
   - platform-tools
   - tools
+  - build-tools-22.0.0
+  - android-22
   - android-$ANDROID_API_LEVEL
   - extra-google-google_play_services
   - extra-google-m2repository
