--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ android:
 jdk:
 - oraclejdk8
 
-cache:
-  directories:
-    - $HOME/.gradle
+cache: false
+  #directories:
+  #  - $HOME/.gradle
 
 before_script:
   - export JAVA_OPTS=-Xmx4096m #TODO: REMOVE THESE LINES
