--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ before_script:
 #  - git config --global user.name "Travis CI"
 #  - ls -R
 script:
-  - "./gradlew testRelease --stacktrace"
+  - "./gradlew test --stacktrace"
   #- android-wait-for-emulator
   #- adb shell input keyevent 82 &
   #- "./gradlew connectedAndroidTest --stacktrace"
