--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   java:
     version: oraclejdk8
+   environment:
+      JAVA_OPTS: "-Xms256m -Xmx2048m"
 dependencies:
   pre:
     - chmod +x gradlew
