shopping list activity boilerplate

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,9 @@
             android:name=".schedule.ScheduleActivity"
             android:label="@string/title_activity_schedule" >
         </activity>
+        <activity
+            android:name=".shoppinglist.ShoppingListActivity"
+            android:label="@string/title_activity_shopping_list"></activity>
     </application>
 
 </manifest>
