circle syntax error

--- a/circle.yml
+++ b/circle.yml
@@ -31,7 +31,7 @@ test:
   override:
     - (./gradlew app:testRelease backend:test):
         timeout: 1200
-    - circle-android wait-for-boot:
+    - circle-android wait-for-boot
     - (./gradlew connectedAndroidTestDebug -PdisablePreDex):
         timeout: 1200
     - cp -r app/build/reports/tests/release/classes/* $CIRCLE_TEST_REPORTS
