update version name and code for apps before publish

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,26 +43,22 @@ android {
     task('increaseVersionCode') << {
         def manifestFile = file("src/main/AndroidManifest.xml")
         def pattern = Pattern.compile("versionCode=\"(\\d+)\"")
+        def patternVersionNumber = Pattern.compile("versionName=\"(\\d+)\\.(\\d+)\\.(\\d+)\\.(\\d+)\"")
         def manifestText = manifestFile.getText()
         def matcher = pattern.matcher(manifestText)
         matcher.find()
         def versionCode = Integer.parseInt(matcher.group(1))
         def manifestContent = matcher.replaceAll("versionCode=\"" + ++versionCode + "\"")
-        manifestFile.write(manifestContent)
-    }
 
-    task('incrementVersionName') << {
-        def manifestFile = file("src/main/AndroidManifest.xml")
-        def patternVersionNumber = Pattern.compile("versionName=\"(\\d+)\\.(\\d+)\\.(\\d+)\\.(\\d+)\"")
-        def manifestText = manifestFile.getText()
-        def matcherVersionNumber = patternVersionNumber.matcher(manifestText)
+        def matcherVersionNumber = patternVersionNumber.matcher(manifestContent)
         matcherVersionNumber.find()
         def majorVersion = Integer.parseInt(matcherVersionNumber.group(1))
         def minorVersion = Integer.parseInt(matcherVersionNumber.group(2))
         def pointVersion = Integer.parseInt(matcherVersionNumber.group(3))
         def buildVersion = Integer.parseInt(matcherVersionNumber.group(4))
         def mNextVersionName = majorVersion + "." + minorVersion + "." + pointVersion + "." + (buildVersion + 1)
-        def manifestContent = matcherVersionNumber.replaceAll("versionName=\"" + mNextVersionName + "\"")
+        manifestContent = matcherVersionNumber.replaceAll("versionName=\"" + mNextVersionName + "\"")
+
         manifestFile.write(manifestContent)
     }
 
