missing dollar sign...

--- a/circle.yml
+++ b/circle.yml
@@ -42,7 +42,7 @@ deployment:
   appengine:
     branch: alpha
     commands:
-      - echo APPENGINE_TOKEN | $HOME/appengine-java-sdk-1.9.26/bin/appcfg.sh --passin update  .
+      - echo $APPENGINE_TOKEN | $HOME/appengine-java-sdk-1.9.26/bin/appcfg.sh --passin update  .
       - git config --global user.email "builds@circleci.com"
       - git config --global user.name "Circle CI"
       - git commit -am "Update version number and codes for automatic deploy."
