--- a/circle.yml
+++ b/circle.yml
@@ -29,8 +29,8 @@ test:
    # - (./gradlew assembleDebug -PdisablePreDex):
     #   timeout: 1200
   override:
-    - (./gradlew app:testRelease backend:test -PdisablePreDex):
-        timeout: 1200
+    #- (./gradlew app:testRelease backend:test -PdisablePreDex):
+    #    timeout: 1200
     #- circle-android wait-for-boot
     #- (./gradlew connectedAndroidTestDebug -PdisablePreDex):
     #    timeout: 1200
@@ -42,7 +42,9 @@ deployment:
   appengine:
     branch: alpha
     commands:
-      - echo $APPENGINE_TOKEN | $HOME/appengine-java-sdk-1.9.26/bin/appcfg.sh --passin update  .
+      - cat @APPENGINE_OUTH_FILE > ~/.appcfg_oauth2_tokens_java
+      - ./gradlew appengineUpdate
+      #- echo $APPENGINE_TOKEN | $HOME/appengine-java-sdk-1.9.26/bin/appcfg.sh --passin update  .
       - git config --global user.email "builds@circleci.com"
       - git config --global user.name "Circle CI"
       - git commit -am "Update version number and codes for automatic deploy."
